--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -13,7 +13,7 @@
     <title>{% block title %}GeoGame{% endblock %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expanded-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <div>
                 <ul class="navbar-nav">
@@ -24,9 +24,16 @@
             </div>
             <div>
                 <ul class="navbar-nav">
+                  {% if user.is_authenticated %}
+                    <span class="navbar-text">Zalogowano jako {{user.username}} | </span>
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
+                        <a class="nav-link" href="/logout">Wyloguj się</a>
+                </li>
+                  {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Zaloguj się</a>
                     </li>
+                  {% endif %}
                 </ul>
             </div>
         </div>
