--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,5 +1,8 @@
 {% extends 'main/base.html' %}
 {% block title %} Home {% endblock %}
 {% block content %} 
-<h1>Home Page</h1>
+<h1>Cześć!</h1>
+{% if user.is_authenticated %}
+<span class="navbar-text">Witaj {{user.username}}</span>
+{% endif %}
 {% endblock %}
