game model & show games in ranking

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -24,6 +24,9 @@
             </div>
             <div>
                 <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/ranking">Ranking</a>
+                    </li>
                   {% if user.is_authenticated %}
                     <span class="navbar-text">Zalogowano jako {{user.username}} | </span>
                     <li class="nav-item">
