--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -20,18 +20,22 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/home">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/ranking">Ranking</a>
+                    </li>
                 </ul>
             </div>
             <div>
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/ranking">Ranking</a>
-                    </li>
+
                   {% if user.is_authenticated %}
-                    <span class="navbar-text">Zalogowano jako {{user.username}} | </span>
-                    <li class="nav-item">
+                      <span class="navbar-text">Zalogowano jako <b>{{user.username}}</b> </span>
+                      <li class="nav-item">
+                        <a class="nav-link" href="/profile">Mój profil</a>
+                      </li>
+                      <li class="nav-item">
                         <a class="nav-link" href="/logout">Wyloguj się</a>
-                </li>
+                      </li>
                   {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Zaloguj się</a>
