--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -17,9 +17,16 @@
         <div class="container-fluid">
             <div>
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/home">Home</a>
-                    </li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/home_loggedin">Home</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/home">Home</a>
+                        </li>
+                    {% endif %}
+
                     <li class="nav-item">
                         <a class="nav-link" href="/ranking">Ranking</a>
                     </li>
