--- a/main/templates/main/home_loggedin.html
+++ b/main/templates/main/home_loggedin.html
@@ -2,18 +2,21 @@
 {% block title %} Home {% endblock %}
 {% block content %}
     <h1>Cześć!</h1>
-    {% if user.is_authenticated %}
-        <span class="navbar-text">Witaj {{ user.username }}</span>
-    {% endif %}
+
+    <span class="navbar-text">Witaj {{ user.username }}. Zostałeś poprawnie zalogowany.</span>
+
+    ta strona home wyświetla się użytkownikom którzy są zalogowani
 
 
-    ta strona home wyświetla się użytkownikom któþrzy nie są zalogowani
-
-    <p class="text-justify"> To jest gra GeoGame, tutaj możesz zgadywać ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet fermentum.
+    <p class="text-justify"> To jest gra GeoGame, tutaj możesz zgadywać ambitioni dedisse scripsisse iudicaretur. Cras
+        mattis iudicium purus sit amet fermentum.
         Donec sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. At nos hinc
         posthac, sitientis piros Afros. Petierunt uti sibi concilium totius Galliae in diem certam indicere. Cras mattis
         iudicium purus sit amet fermentum!</p>
 
-    <p class="text-justify"> Zaloguj się aby zagrać</p>
+
+    <p><a href="/login">Graj!</a></p>
+
+
 
 {% endblock %}
