--- a/main/templates/main/home_loggedin.html
+++ b/main/templates/main/home_loggedin.html
@@ -15,7 +15,7 @@
         iudicium purus sit amet fermentum!</p>
 
 
-    <p><a href="/login">Graj!</a></p>
+    <p><a href="/game">Graj!</a></p>
 
 
 
