--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -7,5 +7,9 @@
 
     <div id="map" style="height: 600px;"></div>
     <script src="{% static 'game.js' %}"></script>
+    <div style="justify-content: center;">
+        <button  id="game_submit" type="submit" class="btn btn-success" onclick="onSubmitClick()" >Zatwierdź</button>
+    </div>
+
 
 {% endblock %}
