--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -7,7 +7,7 @@
     {% endif %}
 
 
-    ta strona home wyświetla się użytkownikom któþrzy nie są zalogowani
+    ta strona home wyświetla się użytkownikom którzy nie są zalogowani
 
     <p class="text-justify"> To jest gra GeoGame, tutaj możesz zgadywać ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet fermentum.
         Donec sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. At nos hinc
