--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -1,11 +1,15 @@
 {% extends 'main/base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block title %} Home {% endblock %}
 {% block content %}
 
-    Tu będzie gra.
-
     <div id="map" style="height: 600px;"></div>
     <script src="{% static 'game.js' %}"></script>
+
+    <form method="post">
+        {% csrf_token %}{{ form|crispy }}
+        <button type="submit" class="btn btn-success">Zapisz</button>
+    </form>
 
 {% endblock %}
