--- a/main/templates/main/home_loggedin.html
+++ b/main/templates/main/home_loggedin.html
@@ -1,21 +1,13 @@
 {% extends 'main/base.html' %}
 {% block title %} Home {% endblock %}
 {% block content %}
-    <h1>Cześć!</h1>
+    <h1 id="centered">Cześć {{ user.username }}!</h1>
 
-    <span class="navbar-text">Witaj {{ user.username }}. Zostałeś poprawnie zalogowany.</span>
+    <p class="text-justify" id='centered'> To pora by wrócić do gry. Powodzenia! </p>
+    <div class="d-grid gap-2">
+        <a href="/game" class="btn btn-primary btn-lg" role="button">Graj!</a>
+    </div>
 
-    ta strona home wyświetla się użytkownikom którzy są zalogowani
-
-
-    <p class="text-justify"> To jest gra GeoGame, tutaj możesz zgadywać ambitioni dedisse scripsisse iudicaretur. Cras
-        mattis iudicium purus sit amet fermentum.
-        Donec sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. At nos hinc
-        posthac, sitientis piros Afros. Petierunt uti sibi concilium totius Galliae in diem certam indicere. Cras mattis
-        iudicium purus sit amet fermentum!</p>
-
-
-    <p><a href="/game">Graj!</a></p>
 
 
 
