--- a/main/templates/main/ranking.html
+++ b/main/templates/main/ranking.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 {% block title %} Ranking {% endblock %}
 {% block content %}
-    <h1>Ranking!</h1>
+    <h1>Ranking</h1>
     <table class="table table-striped">
         <thead>
         <tr>
