--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -9,6 +9,8 @@
     <script src="{% static 'game.js' %}"></script>
     <div style="justify-content: center;">
         <button  id="game_submit" type="submit" class="btn btn-success" onclick="onSubmitClick()" >Zatwierdź</button>
+        <button  id="next_map" type="submit" class="btn btn-success" onclick="onNextClick()" >Następny</button>
+        <button  id="new_game" type="submit" class="btn btn-success" onclick="onNewGame()" >Nowa gra</button>
     </div>
 
 
