--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -28,7 +28,7 @@
 
     <title>{% block title %}GeoGame{% endblock %}</title>
 </head>
-<body>
+<body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
         <div>
