--- a/main/static/style.css
+++ b/main/static/style.css
@@ -71,18 +71,37 @@ h1 {
   justify-content: space-between;
 }
 
-/*.gameNav button:first-child {*/
-/*  justify-self: flex-start;*/
-/*}*/
-
-/*!*.gameNav button:nth-child(2) {*!*/
-/*!*  text-align: center;*!*/
-/*!*}*!*/
-
 .gameNav button:last-child {
   margin-left: auto;
 }
 
+/*ranking*/
+
+tr{
+    color: var(--main_dark);
+}
+tr td{
+    padding-bottom: 50px;
+}
+
+.rankRows{
+    background: #E5D9B6;
+
+}
+.rankRows td{
+    box-shadow: 0 4px 0px rgba(0, 0, 0, 0.25);
+
+}
+.rankRows td:last-child{
+    border-radius: 0 20px 20px 0;
+
+}
+
+.rankRows th{
+    box-shadow: 0 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 20px 0 0 20px;
+
+}
 
 
 
